--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/production/styles.css">
+  <link rel="stylesheet" href="C:\Users\Usuario\Desktop\BC_Desafios\BC_Desafio07\production\styles.css">
   <title>Frontend Mentor | Clipboard landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -37,7 +37,7 @@
       <p>meaning you can access your snippets immediately on all your </p>
       <p>devices. Our Mac and iOS apps will help you organize everything.</p>
       <section>
-        <picture>  <img src="images/image-computer.png" alt="computadora"></picture>
+        <picture>  <img src="images/image-computer.png" alt="computadora" width="300px"></picture>
         <h1> Quick Search</h1> 
         <p>Easily search your snippets by content, category, web address, application, and more.</p>
         <h1> iCloud Sync</h1>
