--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,13 @@
   
   
 <main class="Main">
-  
-    <article class="parte1">
-      <h2> Keep track of your snippets</h2>
-      <p>Clipboard instantly stores any item you copy in the cloud, 
+      <section class="encabezado">
+        <h2> Keep track of your snippets</h2>
+        <p>Clipboard instantly stores any item you copy in the cloud, 
         meaning you can access your snippets immediately on all your 
         devices. Our Mac and iOS apps will help you organize everything.</p>
+      </section>
+      
       <section>
         <picture>  <img src="images/image-computer.png" alt="computadora"></picture>
         <h1> Quick Search</h1> 
@@ -45,7 +46,7 @@
         <h1>Complete History</h1> 
         <p> Retrieve any snippets from the first moment you started using the app.</p>
       </section>
-    </article>
+    
     <article class="parte2">
       <h1>Access Clipboard anywhere</h1> 
       <p>Whether you’re on the go, or at your computer, you can access all your Clipboard</p>
