agregue clase grid

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
     <article class="parte3">
       <h1>Supercharge your workflow</h1> 
       <p>We’ve got the tools to boost your productivity.</p>
+
+    <section class="grid">
       <section class="blacklists">
         <figure><img src="images/icon-blacklist.svg" alt="blacklist"></figure>
         <figcaption>
@@ -77,6 +79,7 @@
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </figcaption>
       </section>
+    </section>
       <section class="logos">
           <figure><img src="images/logo-google.png" alt="google"></figure>
           <figure><img src="images/logo-ibm.png" alt="ibm"></figure>
