--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
       
     
       <section class="logos">
-          <img class="logos"src="images/logo-google.png" alt="google">
+          <img class="google"src="images/logo-google.png" alt="google">
           <img class="ibm"src="images/logo-ibm.png" alt="ibm">
           <img class="microsoft"src="images/logo-microsoft.png" alt="microsoft">  
           <img class="hp"src="images/logo-hp.png" alt="hp">
